@@ -20,10 +20,10 @@
     -ms-box-shadow: 0px 0px 15px rgba(0,0,0,0.15);
     box-shadow: 0px 0px 15px rgba(0,0,0,0.15);
 }
-#feedbackForm textarea, #feedbackForm input[type="text"] {
+#feedbackForm textarea, #feedbackForm input[type="text"], #feedbackForm input[type="email"] {
     width: 280px;
     padding: 10px;
-    margin: 0;
+    margin: 0 0 10px 0;
     outline: none;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
