@@ -3,18 +3,18 @@
 # ===========================================================================
 # Packages essential to this app. Needed by anyone who wants to use this app.
 # ===========================================================================
-Django==1.4.5
--e git+git://github.com/pinax/django-mailer.git@919805e25fc18b06487b25414d4e5d5e05a92108#egg=mailer
-South
+django==1.6.1
+-e git+https://github.com/pinax/django-mailer.git@bd6d1a75f63a398631bcba010005cdb8bd803edd#egg=mailer
+South==0.8.4
+django-libs==1.35.2
 
 # ==============================================================
 # Packages needed for running the tests. Needed by contributors.
 # ==============================================================
--e git://github.com/bitmazk/django-libs.git#egg=django_libs
-factory_boy
-flake8
-nose
-django-nose
-coverage
-django-coverage
-ipdb
+coverage==3.7.1
+django-coverage==1.2.4
+django-nose==1.2
+factory_boy==2.3.0
+flake8==2.1.0
+ipdb==0.8
+ipython==1.1.0
