@@ -1,5 +1,6 @@
 === ongoing ===
 
+- Added optional content_object to e.g. report abuse.
 
 === 0.2 ===
 
